tests/lean/ex2.lean
(* comment *)
(* (* nested comment *) *)
Show true
SetOption lean::pp::notation false
Show true && false
SetOption pp::unicode false
Show true && false
Variable a : Bool
Variable a : Bool
Variable b : Bool
Show a && b
Variable A : Type
Check a && A
Show Environment 1
Show Options
SetOption lean::p::notation true
SetOption lean::pp::notation 10
SetOption lean::pp::notation true
Show a && b
